Jira Stories Fetched